--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "license": "Apache-2.0",
   "homepage": "https://elements.polymer-project.org/elements/google-apis?active=google-js-api",
   "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1",
-    "@polymer/iron-jsonp-library": "^3.0.0-pre.1"
+    "@polymer/polymer": "^3.0.0-pre2.1",
+    "@polymer/iron-jsonp-library": "^3.0.0-pre.12"
   },
   "devDependencies": {}
 }
