--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@atomikolex/google-apis",
   "flat": true,
-  "version": "3.0-preview",
-  "description": "Web components to load Google API libraries",
+  "version": "0.0.1",
+  "description": "Web components to load Google API libraries - unofficial HOLDOUT (done with Polymer-Modulizer)",
   "contributors": [
     "Scott Miles <sjmiles@google.com>",
     "Eric Bidelman <ebidel@gmail.com>"
@@ -18,8 +18,7 @@
   "license": "Apache-2.0",
   "homepage": "https://elements.polymer-project.org/elements/google-apis?active=google-js-api",
   "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre12",
-    "@polymer/iron-jsonp-library": "^3.0.0-pre.12"
+    "@polymer/polymer": "^3.0.0-pre.12"
   },
   "devDependencies": {}
 }
