--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "@atomiko/google-apis-holdout",
-  "flat": true,
-  "version": "0.0.2",
-  "description": "Web components to load Google API libraries - unofficial HOLDOUT (done with Polymer-Modulizer)",
   "contributors": [
-    "Scott Miles <sjmiles@google.com>",
-    "Eric Bidelman <ebidel@gmail.com>"
+    {
+      "name": "Scott Miles",
+      "email": "sjmiles@google.com"
+    },
+    {
+      "name": "Eric Bidelman",
+      "email": "ebidel@gmail.com"
+    }
   ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.12"
+  },
+  "deprecated": false,
+  "description": "Web components to load Google API libraries - unofficial HOLDOUT (done with Polymer-Modulizer)",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://elements.polymer-project.org/elements/google-apis?active=google-js-api",
   "keywords": [
     "web-component",
     "web-components",
@@ -15,9 +25,6 @@
     "apis"
   ],
   "license": "Apache-2.0",
-  "homepage": "https://elements.polymer-project.org/elements/google-apis?active=google-js-api",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.12"
-  },
-  "devDependencies": {}
+  "name": "@atomiko/google-apis-holdout",
+  "version": "0.0.3"
 }
